--- a/Yapbam/src/localization/de/contributors.html
+++ b/Yapbam/src/localization/de/contributors.html
@@ -23,6 +23,8 @@ color: #ff9900;
       Lanza</a>, Robert Marques Maia<br>
     Deutsche Übersetzung: <a href="http://jrthies.users.sourceforge.net/">Jean-René
       Thies</a><br>
+    Russisch Übersetzung: <a href="http://xn--90abhbolvbbfgb9aje4m.xn--p1ai/">Aleksey Cheremnih</a>
+    <br>
     <br>
     Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br>
     <br>
