--- a/src/localization/contributors.html
+++ b/src/localization/contributors.html
@@ -23,6 +23,7 @@ color: #ff9900;
       Lanza</a>, Robert Marques Maia<br>
     German translation: <a href="http://jrthies.users.sourceforge.net/">Jean-René
       Thies</a><br>
+    Russian translation: <a href="http://xn--90abhbolvbbfgb9aje4m.xn--p1ai/">Aleksey Cheremnih</a>
     <br>
     French user guide: Christian Record<br>
     <br>
