--- a/deliveryProcess.html
+++ b/deliveryProcess.html
@@ -32,8 +32,8 @@ text-decoration: underline;
       <li>Create the windows installer with NSIS.<br>
         select the "Installer based on a zip file" option and enter
         "$EXEDIR\Yapbam" as default folder.</li>
-      <li>Run the deployer in project YapbamDeployment (Be aware to set the
-        right versions in the program arguments).<br>
+      <li>Run net.yapbam.deployment.YapbamDeployer in project YapbamDeployment (Be aware to set the
+        right versions in the program fields).<br>
         Wait for it completes (it is long as this class upload Yapbam to
         sourceForge).<br>
         <span style="font-weight: bold; text-decoration: underline;">Copy the
