--- a/src/localization/fr/license.html
+++ b/src/localization/fr/license.html
@@ -68,6 +68,9 @@ licence <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
 Public License</a>. Son code est inclus dans les sources de
 Yapbam (terai.xrea.jp.DndTabbedPane).<br>
 <br>
+Ce logiciel utilise un composant écrit par <a href="https://tips4java.wordpress.com/">Darryl Burke</a>.
+Son code est inclus dans les sources de Yapbam (net.yapbam.gui.util.MenuScroller).<br>
+<br>
 L'application windows est générée avec <a href="http://launch4j.sourceforge.net/">Launch4J</a>.
 Launch4J est distribué sous&nbsp;<a href="http://www.opensource.org/licenses/bsd-license.html">Licence
 BSD</a>.<br>
