--- a/src/localization/license.html
+++ b/src/localization/license.html
@@ -75,6 +75,9 @@ released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
 Public License</a>. Its source code&nbsp;is included in
 Yapbam sources (terai.xrea.jp.DndTabbedPane).<br>
 <br>
+This software uses a&nbsp;component&nbsp;written by&nbsp;<a href="https://tips4java.wordpress.com/">Darryl Burke</a>.
+Its source code&nbsp;is included in Yapbam sources (net.yapbam.gui.util.MenuScroller).<br>
+<br>
 The windows executable is created with <a href="http://launch4j.sourceforge.net/">Launch4J</a>,
 released under <a href="http://www.opensource.org/licenses/bsd-license.html">BSD
 license</a>.
