--- a/Yapbam/src/localization/contributors.html
+++ b/Yapbam/src/localization/contributors.html
@@ -25,6 +25,8 @@ color: #ff9900;
       Thies</a><br>
     Russian translation: <a href="http://xn--90abhbolvbbfgb9aje4m.xn--p1ai/">Aleksey Cheremnih</a>
     <br>
+    Turkish translation: Metin Redjepi<br>
+    <br>
     French user guide: Christian Record<br>
     <br>
     Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br>
