--- a/Yapbam/src/localization/fr/contributors.html
+++ b/Yapbam/src/localization/fr/contributors.html
@@ -23,8 +23,8 @@ color: #ff9900;
       Lanza</a>, Robert Marques Maia<br>
     Traduction allemande : <a href="http://jrthies.users.sourceforge.net/">Jean-René
       Thies</a><br>
-    Traduction russe : <a href="http://xn--90abhbolvbbfgb9aje4m.xn--p1ai/">Aleksey Cheremnih</a>
-    <br>
+    Traduction russe : <a href="http://xn--90abhbolvbbfgb9aje4m.xn--p1ai/">Aleksey Cheremnih</a><br>
+    Traduction turque : Metin Redjepi<br>
     <br>
     Tests : Laurence Bot, Christophe Aroles, Philippe Petit<br>
     <br>
