--- a/src/localization/fr/contributors.html
+++ b/src/localization/fr/contributors.html
@@ -23,6 +23,7 @@ color: #ff9900;
       Lanza</a>, Robert Marques Maia<br>
     Traduction allemande : <a href="http://jrthies.users.sourceforge.net/">Jean-René
       Thies</a><br>
+    Traduction espagnole : Alejandro Navarro<br>
     Traduction russe : <a href="http://xn--90abhbolvbbfgb9aje4m.xn--p1ai/">Aleksey Cheremnih</a><br>
     Traduction turque : Metin Redjepi<br>
     <br>
