--- a/deliveryProcess.html
+++ b/deliveryProcess.html
@@ -17,7 +17,7 @@ text-decoration: underline;
         that no translation occurred since last build (if so build the project).<br>
         Launch the com.fathzer.localization.crowdin.GetTranslationsCmd in
         jlocal-tools project with arguments project=yapbam key=<span style="font-style: italic;">theyapbamkey</span>
-        lng=fr,pt-BR:pt,de,en:,zh-TW:zh,tr,nl,ru,ro,pl,hu,es-ES:es,it,ar where=<span style="font-style: italic;">workspaceRoot</span><br>
+        lng=fr,pt-BR:pt,de,en:,zh-TW:zh,tr,nl,ru,ro,pl,hu,es-ES:es,it,ar,ja,el where=<span style="font-style: italic;">workspaceRoot</span><br>
         Then, check whether YapbamCommons translations has changed. In such a
         case, update the artifact.<br>
         <span style="font-weight: bold; text-decoration: underline;">Be aware of
