--- a/src/localization/contributors.html
+++ b/src/localization/contributors.html
@@ -27,6 +27,7 @@ color: #ff9900;
     Russian translation: <a href="http://xn--90abhbolvbbfgb9aje4m.xn--p1ai/">Aleksey Cheremnih</a>
     <br>
     Turkish translation: Metin Redjepi<br>
+    Arabic translation: <a href="https://utopian.io/utopian-io/@khaled-dz/translation-yapbam-into-arabic-707-words">Khaled-dz</a><br>
     <br>
     French user guide: Christian Record<br>
     <br>
