--- a/Yapbam/src/localization/fr/contributors.html
+++ b/Yapbam/src/localization/fr/contributors.html
@@ -26,6 +26,7 @@ color: #ff9900;
     Traduction espagnole : Alejandro Navarro<br>
     Traduction russe : <a href="http://xn--90abhbolvbbfgb9aje4m.xn--p1ai/">Aleksey Cheremnih</a><br>
     Traduction turque : Metin Redjepi<br>
+    Traduction arabe : <a href="https://utopian.io/utopian-io/@khaled-dz/translation-yapbam-into-arabic-707-words">Khaled-dz</a><br>
     <br>
     Tests : Laurence Bot, Christophe Aroles, Philippe Petit<br>
     <br>
