--- a/src/localization/contributors.html
+++ b/src/localization/contributors.html
@@ -22,12 +22,13 @@ color: #ff9900;
     Portuguese translation: <a href="http://marcolanza.users.sourceforge.net/">Marco
       Lanza</a>, Robert Marques Maia<br>
     German translation: <a href="http://jrthies.users.sourceforge.net/">Jean-René
-      Thies</a><br>
+      Thies</a> and Wasilis Mandratzis-Walz<br>
     Spanish translation: Alejandro Navarro<br>
     Russian translation: <a href="http://xn--90abhbolvbbfgb9aje4m.xn--p1ai/">Aleksey Cheremnih</a>
     <br>
     Turkish translation: Metin Redjepi<br>
     Arabic translation: <a href="https://utopian.io/utopian-io/@khaled-dz/translation-yapbam-into-arabic-707-words">Khaled-dz</a><br>
+    Greek translation: Wasilis Mandratzis-Walz<br>
     <br>
     French user guide: Christian Record<br>
     <br>
