--- a/src/localization/fr/contributors.html
+++ b/src/localization/fr/contributors.html
@@ -22,11 +22,12 @@ color: #ff9900;
     Traduction portuguaise : <a href="http://marcolanza.users.sourceforge.net/">Marco
       Lanza</a>, Robert Marques Maia<br>
     Traduction allemande : <a href="http://jrthies.users.sourceforge.net/">Jean-René
-      Thies</a><br>
+      Thies</a> et Wasilis Mandratzis-Walz<br>
     Traduction espagnole : Alejandro Navarro<br>
     Traduction russe : <a href="http://xn--90abhbolvbbfgb9aje4m.xn--p1ai/">Aleksey Cheremnih</a><br>
     Traduction turque : Metin Redjepi<br>
     Traduction arabe : <a href="https://utopian.io/utopian-io/@khaled-dz/translation-yapbam-into-arabic-707-words">Khaled-dz</a><br>
+    Traduction grecque : Wasilis Mandratzis-Walz<br>
     <br>
     Tests : Laurence Bot, Christophe Aroles, Philippe Petit<br>
     <br>
