Adds Dutch translation

--- a/Yapbam/src/localization/de/contributors.html
+++ b/Yapbam/src/localization/de/contributors.html
@@ -25,6 +25,7 @@ color: #ff9900;
       Thies</a><br>
     Russisch Übersetzung: <a href="http://xn--90abhbolvbbfgb9aje4m.xn--p1ai/">Aleksey Cheremnih</a><br>
     Türkische Übersetzung: Metin Redjepi<br>
+    Niederländische Übersetzung: Joop Nijenhuis<br>
     <br>
     Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br>
     <br>
