--- a/Yapbam/src/localization/fr/contributors.html
+++ b/Yapbam/src/localization/fr/contributors.html
@@ -28,6 +28,7 @@ color: #ff9900;
     Traduction turque : Metin Redjepi<br>
     Traduction arabe : <a href="https://utopian.io/utopian-io/@khaled-dz/translation-yapbam-into-arabic-707-words">Khaled-dz</a><br>
     Traduction grecque : Wasilis Mandratzis-Walz<br>
+    Traduction néerlandaise : Joop Nijenhuis<br>
     <br>
     Tests : Laurence Bot, Christophe Aroles, Philippe Petit<br>
     <br>
