--- a/src/localization/contributors.html
+++ b/src/localization/contributors.html
@@ -29,6 +29,7 @@ color: #ff9900;
     Turkish translation: Metin Redjepi<br>
     Arabic translation: <a href="https://utopian.io/utopian-io/@khaled-dz/translation-yapbam-into-arabic-707-words">Khaled-dz</a><br>
     Greek translation: Wasilis Mandratzis-Walz<br>
+    Dutch translation: Joop Nijenhuis<br>
     <br>
     French user guide: Christian Record<br>
     <br>
