--- a/src/localization/de/contributors.html
+++ b/src/localization/de/contributors.html
@@ -23,8 +23,11 @@ color: #ff9900;
       Lanza</a>, Robert Marques Maia<br>
     Deutsche Übersetzung: <a href="http://jrthies.users.sourceforge.net/">Jean-René
       Thies</a><br>
+    Spanische translation: Alejandro Navarro<br>
     Russisch Übersetzung: <a href="http://xn--90abhbolvbbfgb9aje4m.xn--p1ai/">Aleksey Cheremnih</a><br>
     Türkische Übersetzung: Metin Redjepi<br>
+    Arabische Übersetzung: <a href="https://utopian.io/utopian-io/@khaled-dz/translation-yapbam-into-arabic-707-words">Khaled-dz</a><br>
+    Griechische Übersetzung: Wasilis Mandratzis-Walz<br>    
     Niederländische Übersetzung: Joop Nijenhuis<br>
     <br>
     Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br>
