--- a/src/localization/contributors.html
+++ b/src/localization/contributors.html
@@ -30,6 +30,7 @@ color: #ff9900;
     Arabic translation: <a href="https://utopian.io/utopian-io/@khaled-dz/translation-yapbam-into-arabic-707-words">Khaled-dz</a><br>
     Greek translation: Wasilis Mandratzis-Walz<br>
     Dutch translation: Joop Nijenhuis<br>
+    Italian translation: <a href="https://github.com/marcoM32">MarcoM32</a><br>
     <br>
     French user guide: Christian Record<br>
     <br>
