--- a/src/localization/de/contributors.html
+++ b/src/localization/de/contributors.html
@@ -29,6 +29,7 @@ color: #ff9900;
     Arabische Übersetzung: <a href="https://utopian.io/utopian-io/@khaled-dz/translation-yapbam-into-arabic-707-words">Khaled-dz</a><br>
     Griechische Übersetzung: Wasilis Mandratzis-Walz<br>    
     Niederländische Übersetzung: Joop Nijenhuis<br>
+    Italienische Übersetzung: <a href="https://github.com/marcoM32">MarcoM32</a><br>
     <br>
     Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br>
     <br>
