--- a/src/localization/fr/contributors.html
+++ b/src/localization/fr/contributors.html
@@ -29,6 +29,7 @@ color: #ff9900;
     Traduction arabe : <a href="https://utopian.io/utopian-io/@khaled-dz/translation-yapbam-into-arabic-707-words">Khaled-dz</a><br>
     Traduction grecque : Wasilis Mandratzis-Walz<br>
     Traduction néerlandaise : Joop Nijenhuis<br>
+    Traduction italienne : <a href="https://github.com/marcoM32">MarcoM32</a><br>
     <br>
     Tests : Laurence Bot, Christophe Aroles, Philippe Petit<br>
     <br>
