Updates relnotes, contributors and README

--- a/src/localization/contributors.html
+++ b/src/localization/contributors.html
@@ -37,7 +37,7 @@ color: #ff9900;
     Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br>
     <br>
     Development: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
-      Astesana (Fathzer)</a>, <a href="http://www.duminy.fr/">Fabien Duminy</a><br>
+      Astesana (Fathzer)</a>, <a href="http://www.duminy.fr/">Fabien Duminy</a>, <a href="https://github.com/marcoM32">MarcoM32</a><br>
     Web site, administration: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
       Astesana (Fathzer)</a><br>
     <br><br>Special thanks to Lionel, François-Paul and Marine for lending their Macintosh to test Yapbam on MacOS.
