--- a/src/localization/fr/contributors.html
+++ b/src/localization/fr/contributors.html
@@ -36,7 +36,7 @@ color: #ff9900;
     Mode d'emploi français : Christian Record<br>
     <br>
     Développement : <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
-      Astesana (Fathzer)</a>, <a href="http://www.duminy.fr/">Fabien Duminy</a><br>
+      Astesana (Fathzer)</a>, <a href="http://www.duminy.fr/">Fabien Duminy</a>, <a href="https://github.com/marcoM32">MarcoM32</a><br>
     Site web, administration : <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
       Astesana (Fathzer)</a><a href="http://www.duminy.fr/"></a>
     <br><br>Remerciements à Lionel, François-Paul et Marine pour les prêts de Macintosh pour tester Yapbam sur MacOS. 
