Adds lang attribute in some HTML files

--- a/src/localization/fr/license.html
+++ b/src/localization/fr/license.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head>
+<html lang="fr"><head>
 <meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>Licence</title></head>
 <body>
 Ce programme est un logiciel libre&nbsp;; vous pouvez le
