--- a/deliveryProcess.html
+++ b/deliveryProcess.html
@@ -32,7 +32,7 @@ text-decoration: underline;
       <li>Create the windows installer with NSIS.<br>
         select the "Installer based on a zip file" option and enter
         "$EXEDIR\Yapbam" as default folder.</li>
-      <li>Run net.yapbam.deployment.YapbamDeployer in project YapbamDeployment (Be aware to set the
+      <li>Run <b>net.yapbam.deployment.YapbamDeployer</b> in project <a href="https://github.com/yapbam/yapbam-deployment">YapbamDeployment</a> (Be aware to set the
         right versions in the program fields).<br>
         Wait for it completes (it is long as this class upload Yapbam to
         sourceForge).<br>
@@ -44,21 +44,9 @@ text-decoration: underline;
         sometimes, upload results in a partial file.</li>
       <li>In the sourceforge file browser, give the linux, BSD, etc...
         attributes (or windows) to the new uploaded files.</li>
-      <li>Commit pending changes to svn repository.</li>
+      <li>Commit pending changes to <a href="https://github.com/yapbam/yapbam">GitHub repository</a>.</li>
       <li>Post a comment on twitter.</li>
       <li>Post replies on opened bug report or feature requests.</li>
-      <li>Mise à jour du référencement par anshare (www.anshare.org)</li>
-      <ol>
-        <li>Mettre à jour la fiche logiciel :</li>
-        <ol>
-          <li>Mettre un lien vers cet .exe (les liens de téléchargement de
-            sourceforge sont interdits) :
-            http://www.yapbam.net/directDownload/yapbam-<span style="font-style: italic;">version</span>.exe.</li>
-          <li>Supprimer Linux dans les OS cible (l'auteur du site ne connait pas
-            le principe de Write Once Run Everywhere, donc on n'a droit qu'à un
-            seul OS).</li>
-        </ol>
-      </ol>
     </ol>
     <br>
     <h2>A way to&nbsp;carefully test the auto update</h2>
